Release 0.4.0 settings, managed images and expressive motion
